Fixed a few mistakes and typos

--- a/source/posts/2012-06-04.md
+++ b/source/posts/2012-06-04.md
@@ -6,33 +6,33 @@
 
 >>![center](http://chyo.ru/testpilot.png)<<
 
-Как, собственно, всё это происходило: в течении одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с легким перекосом в сторону гиков. Ну, не то чтобы с легким, скорее, с сильным, потому что тест пилот обычно включен у пользователей Mozilla Nightly, например, у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
+Как, собственно, всё это происходило: в течение одной недели все данные тех, кто участвует в программе [Test Pilot](https://testpilot.mozillalabs.com/), отправлялись на сервера мозиллы. Всего было обследовано более 200 тысяч человек, с легким перекосом в сторону гиков. Ну, не то чтобы с легким, скорее, с сильным, потому что тест пилот обычно включен у пользователей Mozilla Nightly, например, у меня. Цель была понять, какими элементами интерфейса и как именно чаще всего пользуются люди, а так же какие фичи не замечают.
 
-Вот интересные области, куда нажимают люди в порядке возрастания частоты.
+Вот интересные области, куда нажимают люди, в порядке возрастания частоты:
 
 * **14.6%** Кнопка "звездочка", выполняющая функцию "быстрой закладки". Никогда не понимал, как она работает. Изучу подробнее.
 * **20.9%** Выбор поисковой системы в строке ввода поиска. Т.е. буквально каждый 5 меняет поисковую систему по умолчанию. Это очень много.
 * **22.1%** Кнопка "Домой". Кто и зачем ей еще пользуется, а? Или это просто возможность быстрого перехода на любимый сайт?
 * **27.0%** Выбор подсказки в строке ввода поиска.
-* **30.0%** Панель закладок. Удивился. Я думал я один такой, постоянно использую Бумарк Бар.
+* **30.0%** Панель закладок. Удивился. Я думал, я один такой, постоянно использую Букмарк Бар.
 * **40.1%** Кнопка "Reload". Вот это реально ужас. Люди реально используют кнопку Reload! ШОК! ВИДЕО!
 * **45.5%** Сама строка ввода поиска.
 * **47.7%** Кнопка "Вперед"
 
-А вот теперь самое интересное, то, что использует более половины пользователей регулярно.
+А вот теперь самое интересное, то, что используют более половины пользователей регулярно:
 
 * **60.7%** выпадающая подсказка в строке ввода URL.
 * **77.5%** Кнопка "создать новый таб".
 * **81.8%** Строка ввода URL.
 * **92.0%** Кнопка "назад".
 
-Вот примерно такой топ. Вдвойне интересен он потому, что в 2010 году паттерн использования был 1:1 такой же.
+Вот примерно такой топ. Вдвойне интересен он потому, что в 2010 году паттерн использования был один в один такой же.
 
 Выводы вы можете сделать сами. А потом сверить с моими, вот они:
 
 * Люди умеют пользоваться саджестами, не только в поиске, но и в строке ввода URL. Поздравляю, люди, вы только что выросли в моих глазах!
 * Люди используют разные поисковые системы. И всем браузерам предстоит с этим что-то решать, потому что сейчас все браузеры пытаются объединить опыт поисковой строки и строки ввода URL.
-* Люди *очень* интенсивно используют закладки. Куда интенсивнее, чем я думал, а, значит, и тут нужна революция, ведь сейчас интерфейс закладок юзабелен только в панели закладок. Это, кстати, косвенно подтверждается и популярностью фичи "визуальные закладки" в яндекс.баре для FireFox.
+* Люди *очень* интенсивно используют закладки. Куда интенсивнее, чем я думал, а значит и тут нужна революция, ведь сейчас интерфейс закладок юзабелен только в панели закладок. Это, кстати, косвенно подтверждается и популярностью фичи "визуальные закладки" в яндекс.баре для FireFox.
 * Всего 0.7% используют кнопку "показать все табы". Скорее всего, ее надо убирать из интерфейса. К сожалению, эта же кнопка позволяет группировать табы, а это фича ради которой я и пользуюсь мозиллой.
 
 В этом опросе [так же получены результаты по использованию меню](https://blog.mozilla.org/ux/2012/06/firefox-heatmap-study-2012-results-are-in/) и проч. Прочитайте, это очень познавательно и удивительно в некоторых аспектах. Открывает глаза на многие детали использования интернета в целом.
@@ -43,22 +43,22 @@
 * [Я недавно писал о новом запуске Bit.ly](http://addmeto.cc/post/2012-05-30/). [А вот реакция на запуск](http://thenextweb.com/apps/2012/06/02/not-a-fan-of-the-big-bitly-revamp-here-are-9-alternatives/) - хороший обзор 9 интересных альтернатив для bit.ly. На самом деле у меня есть база из примерно 5 сотен сокращалок. От себя добавлю, что, если вам нужна просто сокращалка, а не набор свистелок - всегда есть [clck.ru](http://clck.ru/) {bitly} {shortener}
 * [Эппловский телевизор, и почему стоит ждать от него революции](http://www.businessinsider.com/apple-television-what-to-expect-2012-6). Бизнесинсайдер всегда такой бизнесинсайдер. {apple} {tv} {fap} {fap} {fap}
 * [Фотохостинг PicPlz закрывается 3 июля. Совсем.](http://thenextweb.com/insider/2012/06/02/photo-sharing-service-picplz-to-shut-down-on-3-july/) Все думают, что причина в инстаграме. {foto} {picplz} {instagram}
-* [10 инстаграммов, но для видео](http://thenextweb.com/apps/2012/06/03/10-instagram-for-video-apps-to-watch/). Я их все пробовал, нормальный только SocialCam. {video} {hipsters}
+* [10 инстаграмов, но для видео](http://thenextweb.com/apps/2012/06/03/10-instagram-for-video-apps-to-watch/). Я их все пробовал, нормальный только SocialCam. {video} {hipsters}
 * [Кошмар гугла: Apple-Фейсбук затусовались](http://news.cnet.com/8301-17852_3-57446229-71/googles-fear-an-apple-facebook-love-fest/). Действительно, Гугл, ударяясь в свой Г+, вряд ли учел, что два таких огромных игрока могут запартнериться. {gplus} {google} {facebook} {apple}
 * [И еще немного на ту же тему: куски Facebook будут очень торчать в iOS6](http://techcrunch.com/2012/06/01/facebook-ios-6-integration/). Я рад, потому что лучше facebook, чем вк и гплас :) {facebook} {ios6} {apple}
 * [А вот и контрмеры: судя по всему, Google запустит 3d-карты быстрее, чем Apple](http://www.forbes.com/sites/anthonykosner/2012/06/02/touche-google-plans-to-announce-its-own-3d-maps-before-apple/). Конечно, быстрее не значит лучше. Но поставить эпл в позицию догоняющих - приятно. [Еще один обзор этой темы от TNW](http://thenextweb.com/google/2012/06/01/google-to-head-apple-off-at-the-pass-by-holding-3d-maps-event-june-6th-just-before-wwdc/) {apple} {google} {maps}
 * [В Gmaps для андроида нашли неиспользованные иконки, видимо, для следующих релизов](http://www.androidpolice.com/2012/06/01/mysterious-new-files-in-the-google-maps-6-8-apk-history-timeline-latitude-g-integration-and-more/). И по ним можно додумать будущий функционал. Круто же? {gmaps} {google}
-* [Когда фейсбук ложится, весь интернет моргает](http://gigaom.com/2012/06/01/when-facebook-goes-down-the-internet-barely-blinks/) и это очевидно. Хотя, я думаю, хуже всего интернету от морганий youTube. {facebook}
-* [Версия "Войны и Мира" для Nook <del>не влезла в память</del> заменяет слово Kindled на Nookd](http://arstechnica.com/information-technology/2012/06/nook-version-of-war-and-peace-turns-the-word-kindled-into-nookd/). Хорошо что Толстой умер уже. {nook} {bandn} {kindle}
+* [Когда фейсбук ложится, весь интернет моргает,](http://gigaom.com/2012/06/01/when-facebook-goes-down-the-internet-barely-blinks/) и это очевидно. Хотя, я думаю, хуже всего интернету от морганий youTube. {facebook}
+* [Версия "Войны и Мира" для Nook <del>не влезла в память</del> заменяет слово Kindled на Nookd](http://arstechnica.com/information-technology/2012/06/nook-version-of-war-and-peace-turns-the-word-kindled-into-nookd/). Хорошо, что Толстой умер уже. {nook} {bandn} {kindle}
 * [Яху и Facebook, вероятно, сумеют договориться по поводу патентов](http://allthingsd.com/20120603/patent-peace-yahoo-and-facebook-in-advanced-negotiations-to-settle-fractious-infringement-lawsuits/). Правда, через суд :) {facebook} {yahoo} {lawyers}
 
 ## На грани
-* [Еврокомиссия намекает, что Google должен поменять поисковую выдачу или предстать перед Европейским судом](http://www.guardian.co.uk/technology/2012/jun/01/google-european-commission-search-results). Потому что нельзя быть на свете красивой такой и промотировать свои сервисы, незаслуженно ставя их выше чужих. Я, как не странно, на стороне гугла. Их сервис, их правила. {google} {antitrust}
+* [Еврокомиссия намекает, что Google должен поменять поисковую выдачу или предстать перед Европейским судом](http://www.guardian.co.uk/technology/2012/jun/01/google-european-commission-search-results). Потому что нельзя быть на свете красивой такой и промотировать свои сервисы, незаслуженно ставя их выше чужих. Я, как ни странно, на стороне гугла. Их сервис, их правила. {google} {antitrust}
 * [Пароли людей старше 55 вдвое круче, чем пароли подростков до 25](http://www.newscientist.com/article/dn21871-over55s-pick-passwords-twice-as-secure-as-teenagers.html). О чем это говорит? О том, что у подростков нет представлений о безопасности? {security} {password}
 * [Статья-фантазия, что бы iOS6 могла утащить у других операционных систем](http://www.imore.com/2012/05/31/higher-hanging-fruit-ios-6/). Лично я никаких революций не жду, меня пока все устраивает. {ios} {apple}
 * [Android 4 уже на 7% совместимых устройств](http://www.theverge.com/2012/6/2/3058522/android-4-0-now-on-7-1-percent-of-devices-still-woefully-behind). Даже андроида 2.2 пока больше. {mobile} {android}
 * [5 лучших прошивок для андроида](http://lifehacker.com/5915093/five-best-android-roms). Мой выбор - cyanogen и miui. {andoird} {mobile} {miui}
-* [Интересное мнение Дэвида Крамера: Облачные решение не для вас](http://justcramer.com/2012/06/02/the-cloud-is-not-for-you/). О том, как выглядят цены на сервер, который действительно нагружен и помогут ли вам тут облака. Опять задумался, что наверное хочу свой сервер в аренду. {cloud} {money}
+* [Интересное мнение Дэвида Крамера: Облачные решения не для вас](http://justcramer.com/2012/06/02/the-cloud-is-not-for-you/). О том, как выглядит цена на сервер, который действительно нагружен и помогут ли вам тут облака. Опять задумался, что наверное хочу свой сервер в аренду. {cloud} {money}
 * [Книга "Taking your talent to the web" стала доступна онлайн](http://takingyourtalenttotheweb.com/). Это исторически ценная книга, вышедшая в 2001 году, одна из самых древних книг по *современному* вебдизайну. {html} {design}
 
 ## Для гиков
