--- a/source/posts/2012-06-05.md
+++ b/source/posts/2012-06-05.md
@@ -25,7 +25,7 @@
 * [Твиттер купил себе дизайн-студию из Вашингтона](http://thenextweb.com/twitter/2012/06/04/twitter-acquires-dc-design-studio-nclud-co-founder-ringlein-becomes-its-new-design-manager/), как говорят, купил только ради патентов на дизайн и людей. Вообще, aqhiring становится слишком модным :( {twitter} {nCloud} {design}
 
 ## На грани
-* [Майкрософт опять очень вольно обращается с сертификатами](http://www.securityweek.com/microsoft-unauthorized-certificate-was-used-sign-flame-malware). Собственно "Flame", как оказалось, распространялся через Windows Update. [Вот чуть больше подробностей от F-Secure](http://www.f-secure.com/weblog/archives/00002377.html). И смысл обоих статей: "Получение сертификата, которым Microsoft подписывает код, было Святым Граалем писателей малвари. Это произошло". {security} {flame}
+* [Майкрософт опять очень вольно обращается с сертификатами](http://www.securityweek.com/microsoft-unauthorized-certificate-was-used-sign-flame-malware). Собственно "Flame", как оказалось, распространялся через Windows Update. [Вот чуть больше подробностей от F-Secure](http://www.f-secure.com/weblog/archives/00002377.html). И смысл обеих статей: "Получение сертификата, которым Microsoft подписывает код, было Святым Граалем писателей малвари. Это произошло". {security} {flame}
 
 Коментарий по этому поводу от <a href="twitter.com/ivladdalvi">@ivladdalvi</a>
 > Смысл такой: Microsoft выпускала сертификаты для нужд лицензирования Terminal Services. По какой-то ошибке, суть которой я не дал себе труда выяснить, к сожалению, такие сертификаты считались валидными для подписывания кода. Я подозреваю, что там соответствующие constrains не были включены в сертификат, то есть ребята в MS настроили CA по умолчанию, не отдавая себе отчет в последствиях - но это моя спекуляция.
