Исправлена пара опечаток

--- a/source/posts/2012-06-06.md
+++ b/source/posts/2012-06-06.md
@@ -74,4 +74,4 @@
 * Новость без ссылки: `curl ifconfig.in` :) {oneliner} {ip}
 
 ## Разное
-* [Что случилось с киберпанк-культурой?](http://motherboard.vice.com/2012/6/5/what-happened-to-cyberpunk--2). В статье есть офигенная фраза: "Anonymous начали DDoSить сайты правительство и разрушать систему, потому что они все читали Нейромансера, когда им было 15? Или Вильям Гибсон настолько хорош как пресказатель? Вероятнее всего и то и другое". {cyberpank} {security} {gibson} {*}
+* [Что случилось с киберпанк-культурой?](http://motherboard.vice.com/2012/6/5/what-happened-to-cyberpunk--2). В статье есть офигенная фраза: "Anonymous начали DDoSить сайты правительства и разрушать систему, потому что они все читали Нейромансера, когда им было 15? Или Вильям Гибсон настолько хорош как предсказатель? Вероятнее всего и то и другое". {cyberpank} {security} {gibson} {*}
