Исправлены несколько орфографических ошибок

--- a/source/posts/2012-06-06.md
+++ b/source/posts/2012-06-06.md
@@ -1,6 +1,6 @@
 # У меня двойственные ощущения
 
-Хотел написать об это вчера, но так и не дождался официального анонса ребят из MoCo. Поэтому пишу сейчас. Вчера случилось сразу три события, и все три связаны с Mozilla.
+Хотел написать об этом вчера, но так и не дождался официального анонса ребят из MoCo. Поэтому пишу сейчас. Вчера случилось сразу три события, и все три связаны с Mozilla.
 
 >>![center](http://chyo.ru/m_1779.png)<<
 
@@ -59,7 +59,7 @@
 * [Статья про "Бизнес модель API"](http://blog.programmableweb.com/2012/06/05/api-business-models-take-centre-stage/). Довольно странная статья, потому что нет там единой бизнес-модели, все API продают по разным правилам. Но внутри статьи две интересных ссылки и один интересный пайчарт. {api} {business}
 * [Oculus - в некотром сымсле альтернатива для phpmyadmin и прочих штук](http://oculusapp.com/). Система, позволяющая делать sql запросы и сохранять их c человеко-читаемыми названиями. Действительно простая и очевидная идея, с прекрасной реализацией. Мугамбо доволен. {sql} {admin}
 * [Nintendo Land это вовсе не следующий Wii Sport](http://arstechnica.com/gaming/2012/06/why-nintendoland-isnt-the-next-wii-sports/). Конечно нет, ведь Wii Sport на порядок круче. Я с его помощью нанял 4 человек, которые все еще с нами работают :) {wii} {nintendo}
-* [Какой язык программирования должен понимать системный аднминистратор](http://everythingsysadmin.com/2012/06/salang.html). По мне так либо никакого, либо все. {sysadmin} {lang}
+* [Какой язык программирования должен понимать системный администратор](http://everythingsysadmin.com/2012/06/salang.html). По мне так либо никакого, либо все. {sysadmin} {lang}
 * [Уже третий год читаю про технологии, которые позволяют управлять рельефом экрана](http://gigaom.com/mobile/new-screen-tech-has-buttons-that-rise-on-command/). В такие моменты хочется кричать "ХАААЛК! ХОТЕТЬ!" {cool} {tech}
 
 ## Для гиков
@@ -74,4 +74,4 @@
 * Новость без ссылки: `curl ifconfig.in` :) {oneliner} {ip}
 
 ## Разное
-* [Что случилось с киберпанк-культурой?](http://motherboard.vice.com/2012/6/5/what-happened-to-cyberpunk--2). В статье есть офигенная фраза: "Anonymous начали DDoSить сайты правительство и разрушать систему, потому что они все читали Нейромансера, когда им было 15? Или Вильям Гибсон настолько хорош как пресказатель? Вероятнее всего и то и другое". {cyberpank} {security} {gibson} {*}
+* [Что случилось с киберпанк-культурой?](http://motherboard.vice.com/2012/6/5/what-happened-to-cyberpunk--2). В статье есть офигенная фраза: "Anonymous начали DDoSить сайты правительства и разрушать систему, потому что они все читали Нейромансера, когда им было 15? Или Вильям Гибсон настолько хорош как пресказатель? Вероятнее всего и то и другое". {cyberpank} {security} {gibson} {*}
