как это нЕ странно -> как это нИ странно http://www.gramota.ru/spravka/punctum/58_335

--- a/source/posts/2012-06-06.md
+++ b/source/posts/2012-06-06.md
@@ -49,7 +49,7 @@
 * [Гугл решил зашопиться, на этот раз прикупили команду QuickOffice](http://googleblog.blogspot.com/2012/06/google-quickoffice-get-more-done.html). И судя по слухам - опять для чего-то в G+. Интересно, как гуглеры реагируют на то, что на всякие вкусные работы берут не их, а покупают другие команды? {googe} {quickoffice} {gplus}
 * [Судя по всему, Oracle потратит на суд с Гуглом гораздо больше, чем получит за нарушение копирайтов](http://news.techeye.net/business/oracles-google-java-show-trial-cost-more-than-it-couldve-won). Что, в общем-то, было предсказуемо, да? {google} {oracle} {lawyers}
 * [Подборка фейков, а точнее концепт-артов вокруг новых макбуков и аймаков](http://www.flickr.com/photos/guilhermescha/with/7295381650/). Интересно, кто окажется ближе всех к истине? Я никаких радикальных изменений в дизайне маков не жду. {apple} {design}
-* [Все говорят что Apple уже 100% отказывается от карт гугла в iOS6](http://arstechnica.com/apple/2012/06/wsj-report-confirms-apple-ousting-google-maps-from-iphone/). И это хорошо. Чем больше компаний делают свои карты - тем лучше всем, как это не странно. {apple} {maps} {gmaps}
+* [Все говорят что Apple уже 100% отказывается от карт гугла в iOS6](http://arstechnica.com/apple/2012/06/wsj-report-confirms-apple-ousting-google-maps-from-iphone/). И это хорошо. Чем больше компаний делают свои карты - тем лучше всем, как это ни странно. {apple} {maps} {gmaps}
 * [Дети должны учиться что-либо делать, а не сдавать стандартные тесты](http://www.slate.com/articles/technology/future_tense/2012/06/maker_faire_and_science_education_american_kids_should_be_building_rockets_and_robots_not_taking_standardized_tests_.html). Мысль показалась мне настолько важной, что я перенес ее из "разное" сюда. Прочитайте, не поленитесь. {education}
 * [Послание Пола Грэма к стартапам, приходящим в YC](https://news.ycombinator.com/item?id=4067297). Главная мысль - фиговый IPO фейсбука сильно подорвал доверие инвесторов к финансированию стартапов на ранней стадии. Т.е. посевные инвестиции YC станут ЕЩЕ меньше. {yc} {startup} {facebook}
 * [Project Glass: как решаются проблемы и делаются прототипы](http://www.fastcodesign.com/1669937/googles-project-glass-inside-the-problem-solving-and-prototyping), интересный взгляд на проблематику изнутри. {projectglass} {design} {*}
