Интересно, а что ж вы правили-то?

--- a/source/posts/2012-06-06.md
+++ b/source/posts/2012-06-06.md
@@ -4,11 +4,11 @@
 
 >>![center](http://chyo.ru/m_1779.png)<<
 
-[Вышел релиз Firefox 13](http://www.mozilla.org/en-US/firefox/13.0/releasenotes/). Каковые же главные изменения:
+[Вышел релиз Firefox 13](http://www.mozilla.org/en-US/firefox/13.0/releasenotes/). Каковы же главные изменения:
 
 * Страница нового таба. На ней теперь показываются самые посещаемые вами сайты. В стиле "визуальных закладок" Яндекса, страницы нового окна Оперы или просто как в многочисленных расширениях фаерфокса.
-* Новая домашняя страница по умолчанию. На ней кроме поисковой строки есть быстрый доступ к закладкам, хистори, истории скачивания и настройкам.
-* Протокол SPDY теперь включен по умолчанию. Правда я пока не нашел сайтов кроме Гугла, которые их поддерживают.
+* Новая домашняя страница по умолчанию. На ней, кроме поисковой строки, есть быстрый доступ к закладкам, хистори, истории скачивания и настройкам.
+* Протокол SPDY теперь включен по умолчанию. Правда, я пока не нашел сайтов, кроме Гугла, которые их поддерживают.
 * Восстановленные после закрытия или падения табы не загружаются до их посещения.
 * Smooth Scrolling включен по умолчанию.
 * Куча менее значимых изменений в кишочках проекта.
@@ -17,20 +17,20 @@
 
 В бете:
 
-* По умолчанию все поисковые системы вызываются по SSL
-* Встроена PDF читалка (кстати, написанная на JavaScript)
+* По умолчанию все поисковые системы вызываются по SSL;
+* Встроена PDF читалка (кстати, написанная на JavaScript);
 * Все плагины теперь работают только после клика. Т.е. click to flash больше не нужен!
-* Окно "загруженные файлы" теперь работает точно так, как в новом Safari
-* Тихий апдейтер, позволяющий втихаря, в духе Хрома, обновить браузер
-* В JavaScript поддержка инкрементального сборщика мусора
+* Окно "загруженные файлы" теперь работает и выглядит точно так, как в новом Safari;
+* Тихий апдейтер, позволяющий втихаря, в духе Хрома, обновить браузер;
+* В JavaScript поддержка инкрементального сборщика мусора.
 
 В альфе (этот канал называется Aurora):
 
-* Радикально уменьшено время старта браузера
-* Новый режим управления настройками, прямо в табе браузера
-* Поддержка [SocialAPI](https://wiki.mozilla.org/Labs/SocialAPI)
-* Совершенно новые средства для разработки. И про них бесполезно рассказывать, это реально надо смотреть! Ну или [почитать вот тут, если вы читаете немецкий](http://www.soeren-hentzschel.at/mozilla/firefox/2012/06/03/firefox-15-mit-kommandozeile-responsive-mode-debugger-mehr-fur-webentwickler/)
-* В еженочных сборках позавчера, кстати, [появились новые средства разработки](http://www.webmonkey.com/2012/06/new-firefox-developer-tools-will-help-you-build-responsive-websites/). Очень удобно. И, главное, оригинально.
+* Радикально уменьшено время старта браузера;
+* Новый режим управления настройками, прямо в табе браузера;
+* Поддержка [SocialAPI](https://wiki.mozilla.org/Labs/SocialAPI);
+* Совершенно новые средства для разработки. И про них бесполезно рассказывать, это реально надо смотреть! Ну или [почитать вот тут, если вы читаете немецкий](http://www.soeren-hentzschel.at/mozilla/firefox/2012/06/03/firefox-15-mit-kommandozeile-responsive-mode-debugger-mehr-fur-webentwickler/);
+* В еженочных сборках позавчера, кстати, [появились новые средства разработки](http://www.webmonkey.com/2012/06/new-firefox-developer-tools-will-help-you-build-responsive-websites/). Очень удобно. И, главное, оригинально;
 * Наконец, в Nightly билдах есть "устанавливаемые приложения". И, опережая вопросы, они работают куда лучше, чем у всех остальных игроков на этом поле.
 
 Особенно симптоматичны эти релизы в свете того, что вчера был [юбилей, 10 лет с первого браузера Mozilla](http://www.mozilla.org/en-US/press/mozilla1.0.html), первого по-настоящему свободного браузера.
@@ -51,27 +51,27 @@
 * [Подборка фейков, а точнее концепт-артов вокруг новых макбуков и аймаков](http://www.flickr.com/photos/guilhermescha/with/7295381650/). Интересно, кто окажется ближе всех к истине? Я никаких радикальных изменений в дизайне маков не жду. {apple} {design}
 * [Все говорят что Apple уже 100% отказывается от карт гугла в iOS6](http://arstechnica.com/apple/2012/06/wsj-report-confirms-apple-ousting-google-maps-from-iphone/). И это хорошо. Чем больше компаний делают свои карты - тем лучше всем, как это ни странно. {apple} {maps} {gmaps}
 * [Дети должны учиться что-либо делать, а не сдавать стандартные тесты](http://www.slate.com/articles/technology/future_tense/2012/06/maker_faire_and_science_education_american_kids_should_be_building_rockets_and_robots_not_taking_standardized_tests_.html). Мысль показалась мне настолько важной, что я перенес ее из "разное" сюда. Прочитайте, не поленитесь. {education}
-* [Послание Пола Грэма к стартапам, приходящим в YC](https://news.ycombinator.com/item?id=4067297). Главная мысль - фиговый IPO фейсбука сильно подорвал доверие инвесторов к финансированию стартапов на ранней стадии. Т.е. посевные инвестиции YC станут ЕЩЕ меньше. {yc} {startup} {facebook}
+* [Послание Пола Грэма к стартапам, приходящим в YC](https://news.ycombinator.com/item?id=4067297). Главная мысль - фиговый IPO фейсбука сильно подорвал доверие инвесторов к финансированию стартапов на ранней стадии. Т.е. посевные инвестиции YC станут ЕЩЕ меньше. Первый комментарий к письму от самого Грэма — фиговый не фейсбук, а именно его IPO. {yc} {startup} {facebook}
 * [Project Glass: как решаются проблемы и делаются прототипы](http://www.fastcodesign.com/1669937/googles-project-glass-inside-the-problem-solving-and-prototyping), интересный взгляд на проблематику изнутри. {projectglass} {design} {*}
 
 ## На грани
-* [Стив Джобс всегда был против того, чтобы пользователь работал с файловой системой](http://oleb.net/blog/2012/06/steve-jobs-on-the-file-system/). Я тоже про это говорю с 2005го года. Слишком низкоуровневая концепция "файлов", хорошо что и в OS X и в Win8 от нее старательно отходят. Глядишь, лет через 5 люди перестанут думать в терминах файлов. {apple} {jobs} {file}
+* [Стив Джобс всегда был против того, чтобы пользователь работал с файловой системой](http://oleb.net/blog/2012/06/steve-jobs-on-the-file-system/). Я тоже про это говорю с 2005-го года. Слишком низкоуровневая концепция "файлов", хорошо, что и в OS X и в Win8 от нее старательно отходят. Глядишь, лет через 5 люди перестанут думать в терминах файлов. {apple} {jobs} {file}
 * [Статья про "Бизнес модель API"](http://blog.programmableweb.com/2012/06/05/api-business-models-take-centre-stage/). Довольно странная статья, потому что нет там единой бизнес-модели, все API продают по разным правилам. Но внутри статьи две интересных ссылки и один интересный пайчарт. {api} {business}
 * [Oculus - в некотром сымсле альтернатива для phpmyadmin и прочих штук](http://oculusapp.com/). Система, позволяющая делать sql запросы и сохранять их c человеко-читаемыми названиями. Действительно простая и очевидная идея, с прекрасной реализацией. Мугамбо доволен. {sql} {admin}
-* [Nintendo Land это вовсе не следующий Wii Sport](http://arstechnica.com/gaming/2012/06/why-nintendoland-isnt-the-next-wii-sports/). Конечно нет, ведь Wii Sport на порядок круче. Я с его помощью нанял 4 человек, которые все еще с нами работают :) {wii} {nintendo}
-* [Какой язык программирования должен понимать системный аднминистратор](http://everythingsysadmin.com/2012/06/salang.html). По мне так либо никакого, либо все. {sysadmin} {lang}
+* [Nintendo Land - это вовсе не следующий Wii Sport](http://arstechnica.com/gaming/2012/06/why-nintendoland-isnt-the-next-wii-sports/). Конечно, нет, ведь Wii Sport на порядок круче. Я с его помощью нанял 4 человек, которые все еще с нами работают :) {wii} {nintendo}
+* [Какой язык программирования должен понимать системный администратор](http://everythingsysadmin.com/2012/06/salang.html). По мне, так либо никакого, либо все. {sysadmin} {lang}
 * [Уже третий год читаю про технологии, которые позволяют управлять рельефом экрана](http://gigaom.com/mobile/new-screen-tech-has-buttons-that-rise-on-command/). В такие моменты хочется кричать "ХАААЛК! ХОТЕТЬ!" {cool} {tech}
 
 ## Для гиков
-* [У Вани Сагалева в highlight.js появилась hosted версия](http://softwaremaniacs.org/soft/highlight/en/download/), а так же версия для node.js. Надо бы прикрутить хостед хайлайтер к этому бложеку. Но я подумаю об этом завтра. {highlight} {javascript}
+* [У Вани Сагалаева в highlight.js появилась hosted версия](http://softwaremaniacs.org/soft/highlight/en/download/), а так же версия для node.js. Надо бы прикрутить хостед хайлайтер к этому бложеку. Но я подумаю об этом завтра. {highlight} {javascript}
 * [Для меня в закладки: 15 пунктов для начинающего Ruby-ста](http://www.jasimabasheer.com/posts/meta_introduction_to_ruby.html). Я не то чтобы начинающий, но прочитать эту статью хочу повнимательнее. {ruby} {tutorial}
 * [Для вас в закладки: не новая статья про Экосистему Питона](http://mirnazim.org/writings/python-ecosystem-introduction/), очень хорошая, всем ее даю, а с вами еще не делился. {python} {tutorial}
 * [Самбисты объявили первую бету Samba 4.0](http://article.gmane.org/gmane.network.samba.announce/251). С тех пор, как Apple написала свою реализацию CIFS, я перестал следить за самбой. Сейчас прочитал changelog - ничего революционного, главное это полноценная поддержка доменов AD. {samba} {cifs}
 * [Краткий обзор изменений в ядре 3.5](http://www.h-online.com/open/news/item/Significant-improvements-coming-in-Linux-3-5-1598702.html). Считаю, что в последнее время Линус и компания начали копать в очень правильном направлении. И ядро у Linux сейчас лучшее в мире по соотношениям фичи/практичность и правильность/быстродействие. {linux}
 * [Копаем Pigом, потребляем Hiveом, хорошее объяснение этой хадупной схемы на примерах](http://hortonworks.com/blog/the-data-lifecycle-part-two-mining-avros-with-pig-consuming-data-with-hive/). Чем дальше смотрю на хадуп, тем больше восхищаюсь. {hadoop} {hive} {pig} {code}
-* [Backbone.js для Django-разработчиков](http://lincolnloop.com/blog/2012/jun/5/backbonejs-django-developers/). Действительно, оказывается можно провести прямые параллели между компонентами джанги и бэкбона. {backbone} {django} {javascript} {python}
+* [Backbone.js для Django-разработчиков](http://lincolnloop.com/blog/2012/jun/5/backbonejs-django-developers/). Действительно, оказывается, можно провести прямые параллели между компонентами джанги и бэкбона. {backbone} {django} {javascript} {python}
 * [Почему-то ранее не видел, реалтаймовый компрессор LZ4, c биндингами буквально ко всему](http://fastcompression.blogspot.fr/p/lz4.html). В закладочки. {compress} {lz4}
 * Новость без ссылки: `curl ifconfig.in` :) {oneliner} {ip}
 
 ## Разное
-* [Что случилось с киберпанк-культурой?](http://motherboard.vice.com/2012/6/5/what-happened-to-cyberpunk--2). В статье есть офигенная фраза: "Anonymous начали DDoSить сайты правительства и разрушать систему, потому что они все читали Нейромансера, когда им было 15? Или Вильям Гибсон настолько хорош как предсказатель? Вероятнее всего и то и другое". {cyberpank} {security} {gibson} {*}
+* [Что случилось с киберпанк-культурой?](http://motherboard.vice.com/2012/6/5/what-happened-to-cyberpunk--2). В статье есть офигенная фраза: "Anonymous начали DDoSить сайты правительства и разрушать систему, потому что они все читали Нейромансера, когда им было 15? Или Вильям Гибсон настолько хорош как предсказатель? Вероятнее всего, и то и другое". {cyberpank} {security} {gibson} {*}
