--- a/source/posts/2012-06-07.md
+++ b/source/posts/2012-06-07.md
@@ -18,7 +18,7 @@
 > * SHA-1 хорошо распараллеливается на GPU
 > * Linkedin не использовала никаких механизмов усиления ключа, а просто хэширование пароля "в лоб" без соли
 > 
-> Если бы LinkedIn использовала механизм для усиления ключа (key stretching), например, PBKDF2, то взлом хэшей был бы существенно затруднен. Основная идея таких механимов: использование соли и многократный "проход" по функции, что затрудняет взлом: с солью посчитать хэши заранее не удастся, а, например, 1000 вычислений хэша (как рекомендуется в том же PBKDF2) потребует больще ресурсов, чем одно вычисление. В идеале к этому еще можно добавить выбор хэш-функции, которую трудно распараллелить на GPU, например, bcrypt.
+> Если бы LinkedIn использовала механизм для усиления ключа (key stretching), например, PBKDF2, то взлом хэшей был бы существенно затруднен. Основная идея таких механимов: использование соли и многократный "проход" по функции, что затрудняет взлом: с солью посчитать хэши заранее не удастся, а, например, 1000 вычислений хэша (как рекомендуется в том же PBKDF2) потребует больше ресурсов, чем одно вычисление. В идеале к этому еще можно добавить выбор хэш-функции, которую трудно распараллелить на GPU, например, bcrypt.
 > 
 > Чтение по теме:
 > 
