woho. syntax nazzi, where are you?

--- a/source/posts/2012-06-07.md
+++ b/source/posts/2012-06-07.md
@@ -6,7 +6,7 @@
 
 Началось все с того, что на форуме insidepro.com некто Polimo написал, что подобрал 236578 паролей из базы линкдина и выложил базу, содержащую 6.5 миллионов хешей от паролей. Пароли было выложены без имени пользователя, есть подозрение, что у автора файла имена пользователей есть.
 
-[Вот самый полный текст про взлом, на arstechnica](http://arstechnica.com/security/2012/06/8-million-leaked-passwords-connected-to-linkedin/].
+[Вот самый полный текст про взлом, на arstechnica](http://arstechnica.com/security/2012/06/8-million-leaked-passwords-connected-to-linkedin/).
 
 База содержала 6.5 миллионов из более чем сотни миллионов пользователей сервиса, однако это, конечно, очень серьезный фейл. Судя по тому, сколько людей используют **очень** простые пароли - о безопасности не пекутся даже те, кто пользуется linkedin. Да что там. Вчера вечером кто-то оперативно запустил сайт [LeakedIn.org](http://leakedin.org), на котором можно ввести свой пароль от линкедина и проверить, нет ли его в базе. **СТОЙТЕ!** Надеюсь, мои читатели умнее и не будут писать свой пароль во всякие неизвестные сайты, правда?
 
