--- a/source/posts/2012-06-07.md
+++ b/source/posts/2012-06-07.md
@@ -27,6 +27,8 @@
 
 Такие дела, братцы. Думайте сами. А сам LinkedIn пока пишет что "ведет расследование" и "пока никакой взлом не подтвердился". ChronedIn, или LinkedPay. Вы, кстати, поняли мою шутку?
 
+UPD: Линкедин написали пост в блоге о том, что данные действительно украдены и всем пострадавшим разосланы сообщения о сбросе пароля. Кто говорил, что мы рано раздуваем панику?
+
 -----
 
 ## Для всех
